# Palantir

collector/: Cargo.toml  install_systemd.sh  palantir-collector.service
collector/src/: main.rs
desktop/: .env.sample  Cargo.toml
desktop/src/: main.rs  moodle.rs
server/: .env.sample  .gitignore  Cargo.toml
server/src/: db.rs  main.rs  template.rs  templates.rs  upload_processing.rs
server/src/routes/: admin.rs  api.rs  auth.rs  files.rs  mod.rs
server/src/routes/admin/: dashboard.rs  mod.rs  subscribe.rs  unsubscribe.rs
server/src/routes/admin/assignment/: get_cards.rs  get_stats_activity.rs  get_stats_browser.rs  get_stats_domains.rs  get_stats_duration.rs  get_stats_outliers.rs  get_stats_shared_lan.rs  get_stats_status.rs  mod.rs  page.rs
server/src/routes/admin/submission/: get_artifacts.rs  get_timeline_network.rs  get_timeline_process.rs  mod.rs  page.rs
server/src/routes/admin/util/: consts.rs  mod.rs  point.rs  zip.rs
server/src/routes/traffic_outliers/: mod.rs
server/templates/: assignment.html  dashboard.html  login.html  submission_detail.html  submissions.html  subs_list.html
server/templates/assignment/: assignment_list.html  assignment_rows.html  card_list.html  page.html  stats_activity.html  stats_browser.html  stats_domains.html  stats_duration.html  stats_outliers.html  stats_shared_lan.html  stats_status.html  submission_card.html  table.html  table_rows.html
server/templates/components/: assign_rows.html  assignment_list.html  net_timeline.html  proc_timeline.html  submission_card.html
server/templates/dashboard/: assignment_list.html  assignment_rows.html  page.html
server/templates/login/: page.html
server/templates/partials/: head_include.html  navbar.html  style.html
server/templates/submission/: artifacts.html  page.html  timeline_network.html  timeline_process.html  traffic_outliers.html
