[package]
name = "palantir_collector"
version = "0.1.0"
edition = "2021"

[dependencies]
pcap = "1"
etherparse = "0.13"
procfs = "0.16"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["formatting"] }
dashmap = "5"
sha2 = "0.10"
hex = "0.4"
anyhow = "1.0.99"
chrono = "0.4.41"
users = "0.11.0"
log = "0.4.27"
env_logger = "0.11.8"
regex = "1.11"
get_if_addrs = "0.5"
lazy_static = "1.5.0"
dns-lookup = "2"
lru = "0.12"