[package]
name = "palantir_collector"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["formatting"] }
anyhow = "1.0.99"
chrono = "0.4.41"
log = "0.4.27"
env_logger = "0.11.8"
regex = "1.11.2"
lazy_static = "1.5.0"
