[package]
name = "palantir_server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-multipart = "0.6"
actix-session = { version = "0.9", features = ["cookie-session"] }
actix-files = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["formatting", "parsing", "local-offset"] }
uuid = { version = "1", features = ["v4"] }
rusqlite = { version = "0.31", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"
ldap3 = { version = "0.11", default-features = false, features = ["tls", "sync"] }
sha2 = "0.10"
hex = "0.4"
mime = "0.3"
futures-util = "0.3"
once_cell = "1"
dotenv = "0.15.0"
zip = "4.5.0"
tera = "1.20.0"
actix = "0.13.5"
